--- a/404/404.html
+++ b/404/404.html
@@ -78,7 +78,7 @@
 		<div id="fof">
 			<div></div>
 			<canvas></canvas>
-			<h1>You shouldn't be here. Go to <a href="https://hakim.se">hakim.se</a></h1>
+			<h1>You shouldn't be here. Go to <a href="https://anshux.live">anshux.live</a></h1>
 		</div>
 
 		<script>
